modificando estilos scss

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,47 +1,49 @@
+/* reset css */
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, sans-serif;
   background-color: #f2f2f2;
   margin: 0;
   padding: 0;
-  background-image: linear-gradient(to bottom, #2a2626, #ffffff);
+}
+body .container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
-.contaner {
-  max-width: 1200px;
-  margin: o auto;
-  padding: 20px;
-  background-color: #ffffff;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-}
-.contaner h1 {
+h1 {
   font-size: 32px;
   color: #333;
 }
-.contaner h2 {
+
+h2 {
   font-size: 24px;
   color: #666;
 }
-.contaner p {
+
+p {
   font-size: 16px;
   color: #777;
   line-height: 1.5;
 }
-.contaner .ima-index {
+
+img.img-index {
   max-width: 100%;
   height: auto;
   margin-top: 20px;
 }
-.contaner a {
+
+a {
   color: #007bff;
   text-decoration: none;
 }
-.contaner a:hover {
+a:hover {
   text-decoration: underline;
 }
 
@@ -59,6 +61,8 @@ footer a:hover {
   text-decoration: underline;
 }
 
+/* proyectos */
+/* cards */
 .cards-container {
   display: grid;
   grid-template-areas: "div div" "div div";
@@ -69,14 +73,26 @@ footer a:hover {
 }
 .cards-container .card:hover {
   border-color: rgb(8, 73, 73);
+  border-radius: 10px;
 }
+
 @media (max-width: 768px) {
   .cards-container {
     display: flex;
     flex-direction: column;
   }
 }
+/* Fondo */
+body {
+  background-image: linear-gradient(to bottom, #2a2626, #ffffff);
+}
 
+.container {
+  background-color: #ffffff;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Estilos responsive */
 @media (max-width: 768px) {
   h1 {
     font-size: 28px;
