--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,104 +1,124 @@
-// variables
-
+/* reset css */
 * {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-}
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  body {
+    font-family: Arial, sans-serif;
     background-color: #f2f2f2;
     margin: 0;
     padding: 0;
-    background-image: linear-gradient(to bottom, #2a2626, #ffffff);
-}
-    .contaner {
-        max-width: 1200px;
-        margin: o auto;
-        padding: 20px;
-        background-color: #ffffff;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-        h1 {
-            font-size: 32px;
-            color: #333;
-        }
-        h2 {
-            font-size: 24px;
-            color: #666;
-        } 
-        p  {
-           font-size: 16px;
-           color: #777;
-           line-height: 1.5;
-        }
-        .ima-index {
-            max-width: 100%;
-            height: auto;
-            margin-top: 20px;
-        }
-        a {
-            color: #007bff;
-            text-decoration: none;
-            &:hover {
-                text-decoration: underline;
-            }
-        }
-        
+    
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
     }
-
-    footer {
-        background-color: #333;
-        color: #fff;
-        padding: 20px;
-        text-align: center;
-        a {
-            color: #fff;
-            text-decoration: none;
-            &:hover {
-                text-decoration: underline;
-            }
-        }
+  }
+  
+  h1 {
+    font-size: 32px;
+    color: #333;
+  }
+  
+  h2 {
+    font-size: 24px;
+    color: #666;
+  }
+  
+  p {
+    font-size: 16px;
+    color: #777;
+    line-height: 1.5;
+  }
+  
+  img.img-index {
+    max-width: 100%;
+    height: auto;
+    margin-top: 20px;
+  }
+  
+  a {
+    color: #007bff;
+    text-decoration: none;
+  
+    &:hover {
+      text-decoration: underline;
     }
-
-// cards
-
-.cards-container {
+  }
+  
+  footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+  
+    a {
+      color: #fff;
+      text-decoration: none;
+  
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+  
+  /* proyectos */
+  
+  /* cards */
+  .cards-container {
     display: grid;
-    grid-template-areas:
-    "div div"
-    "div div";
-
+    grid-template-areas: 
+      "div div"
+      "div div";
+    
     .card {
-        margin: 10px;
-        padding: 10px;
-        &:hover{
-            border-color: rgb(8, 73, 73);
-        } 
+      margin: 10px;
+      padding: 10px;
+  
+      &:hover {
+        border-color: rgb(8, 73, 73);
+        border-radius: 10px;
+      }
     }
-    @media (max-width: 768px) {
-        display: flex;
-        flex-direction: column;
+  }
+  
+  @media (max-width: 768px) {
+    .cards-container {
+      display: flex;
+      flex-direction: column;
     }
-}
-
-// responsive
-
-@media (max-width: 768px) {
+  }
+  
+  /* Fondo */
+  body {
+    background-image: linear-gradient(to bottom, #2a2626, #ffffff);
+  }
+  
+  .container {
+    background-color: #ffffff;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  /* Estilos responsive */
+  
+  @media (max-width: 768px) {
     h1 {
-        font-size: 28px;
+      font-size: 28px;
     }
-
+  
     h2 {
-        font-size: 20px;
+      font-size: 20px;
     }
-
+  
     p {
-        font-size: 14px;
+      font-size: 14px;
     }
-}
-
-@media (max-width: 576px) {
+  }
+  
+  @media (max-width: 576px) {
     h1 {
       font-size: 24px;
     }
@@ -111,3 +131,4 @@ body {
       font-size: 12px;
     }
   }
+  
