--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ h2 {
 
 p {
   font-size: 16px;
-  color: #777;
+  color: #221f1f;
   line-height: 1.5;
 }
 
@@ -53,6 +53,9 @@ footer {
   padding: 20px;
   text-align: center;
 }
+footer p {
+  color: #f6f8fa;
+}
 footer a {
   color: #fff;
   text-decoration: none;
@@ -61,7 +64,6 @@ footer a:hover {
   text-decoration: underline;
 }
 
-/* proyectos */
 /* cards */
 .cards-container {
   display: grid;
