--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* reset css */
 * {
   margin: 0;
   padding: 0;
@@ -116,6 +115,16 @@ body {
   p {
     font-size: 12px;
   }
+}
+body {
+  font-size: 16px;
+}
+
+.button, .btn-primary {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #0d6efd;
+  color: white;
 }
 
 /*# sourceMappingURL=styles.css.map */
