--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,10 @@ h2 {
   color: #666;
 }
 
+.container h2 {
+  font-size: 40px;
+}
+
 p {
   font-size: 16px;
   color: #221f1f;
@@ -85,7 +89,7 @@ footer a:hover {
 }
 /* Fondo */
 body {
-  background-image: linear-gradient(to bottom, #2a2626, #ffffff);
+  background-image: linear-gradient(to bottom, #36442e, #bfc7b5);
 }
 
 .container {
@@ -125,6 +129,57 @@ body {
   padding: 10px 20px;
   background-color: #0d6efd;
   color: white;
+}
+
+.img-index {
+  max-width: 100%;
+  height: auto;
+  margin-top: 20px;
+  transition: transform 0.5s ease-in-out;
+}
+
+.img-index:hover {
+  transform: scale(1.1);
+}
+
+@keyframes cardAnimation {
+  0% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.card {
+  animation: cardAnimation 0.5s ease-in-out;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+h2 {
+  animation: fade-in 0.5s ease-in-out;
+}
+
+@keyframes rotate-in {
+  0% {
+    transform: rotateX(90deg);
+    opacity: 0;
+  }
+  100% {
+    transform: rotateX(0);
+    opacity: 1;
+  }
+}
+h1 {
+  animation: rotate-in 0.8s ease-in-out;
 }
 
 /*# sourceMappingURL=styles.css.map */
